# shipa_delivery_agent

./: .env.example  .gitignore  CLAUDE.local.md  README.md  database_schema.md  docker-compose.yml  draft.md  pyproject.toml  railway.json
app/: config.py  db.py  deps.py  enums.py  main.py  security.py
app/models/: __init__.py  calls.py  operations.py  read.py
app/routers/: dashboard.py  ingest.py  tools.py  twin.py
app/schemas/: actions.py  calls.py  dashboard.py  ingest.py  orders.py  twin.py  verify.py
app/services/: actions.py  calls.py  customers.py  guard.py  insights.py  matching.py  metrics.py  orders.py  verification.py
db/: seed_demo.py  seed_demo_calls.py  seed_test_customers.sql  seed_test_user.sql  seed_twin_bulk.sql  seed_twin_mock.sql  seed_twin_workflow.sql  seed_verifications_mock.sql
frontend/: .env.example  README.md  package-lock.json  package.json  railway.json
migrations/: env.py
tests/: conftest.py  test_actions.py  test_actions_sync.py  test_auth.py  test_calls_service.py  test_calls_sync.py  test_cors.py  test_customers_service.py  test_dashboard.py  test_dashboard_lookups.py  test_disposition.py  test_guard.py  test_idempotency.py  test_ingest.py  test_insights_service.py  test_matching.py  test_metrics_service.py  test_migrations.py  test_mock_coords.py  test_models.py  test_order_coords.py  test_orders.py  test_orders_service.py  test_read_endpoints.py  test_read_view_schemas.py  test_security.py  test_sync_coords.py  test_twin.py  test_twin_endpoint.py  test_twin_sync.py  test_verification.py  test_verify_endpoint.py
(+65 files in other folders)
